tests/rename/should_compile/ExportWarnings6.hs
module ExportWarnings6 ({-# WARNING "warn" #-} x, x) where
x = 1