tests/rename/should_fail/DifferentExportWarningsA.hs
{-# LANGUAGE PatternSynonyms #-}
module DifferentExportWarningsA (x, y, z) where

x = undefined
y = undefined
z = undefined